<resources>
    <string name="app_name">CulinAIry</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_capture_receipt">Capture Receipt</string>

    <!--    Buat Tambah Produk-->
    <string name="nama">Nama</string>
    <string name="simpan">Simpan</string>
    <string name="satuan">Satuan (Lt,Pcs,Pack,gr)</string>
    <string name="jumlah">Jumlah</string>
    <string name="harga_satuan">Harga Satuan (Rp)</string>

    <string name="input_placeholder_nama">Masukkan nama barang</string>
    <string name="input_placeholder_jumlah">Masukkan jumlah barang</string>
    <string name="input_placeholder_satuan">Pilih satuan</string>
    <string name="input_placeholder_harga">Masukkan harga satuan</string>

    <!--    Buat Edit Produk-->
    <string name="edit">Edit</string>

    <!--   Profile Page   -->
    <string name="profile_image">Profile Image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="title_profile_edit">Edit Profile</string>

    <!--   Login Page   -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_placeholder">your email</string>
    <string name="password_placeholder">your password</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="lupa_password">lupa password?</string>
    <string name="masuk">Masuk</string>
    <string name="registrasi">Registrasi</string>
    <string name="or_login_with">or login with</string>
    <string name="logo">logo</string>

    <!--   Register Page   -->
    <string name="posisi">Alamat</string>
    <string name="nama_placeholder">masukkan nama</string>
    <string name="posisi_placeholder">masukkan alamat</string>
    <string name="tandc">I agree with terms and condition</string>
    <string name="email_placeholder_2">masukkan email</string>
    <string name="password_placeholder_2">massukan password</string>
    <string name="return_to_login"><u>Return to login</u></string>

    <string name="title_product">Product</string>
    <string name="title_profile">Profile</string>
    <string name="title_scan">Scan</string>

    <!--   Capture Receipt   -->
    <string name="overlay">Overlay</string>
    <string name="gallery_button">Gallery Button</string>
    <string name="camera_button">Camera Button</string>
    <string name="retake">Retake</string>
    <string name="next">Continue</string>

    <!--   Capture Receipt Result   -->
    <string name="edit_struk">Edit Struk</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="struk">Struk</string>
    <string name="total_harga">Total Harga</string>
    <string name="rp0">Rp0</string>
    <string name="item_0kg">Item 0kg</string>
    <string name="_0x">0x</string>
    <string name="item_name">Item name</string>
    <string name="_0">0</string>
    <string name="x">x</string>

    <!--   Capture Receipt Success   -->
    <string name="success">Success</string>
    <string name="struk_pembelanjaan_berhasil_ndisimpan_di_aplikasi">Struk pembelanjaan berhasil\ndisimpan di aplikasi</string>
    <string name="kembali_ke_home">Kembali ke home</string>
    <string name="recent_transactions_title">Daftar Transaksi Terbaru</string>
    <string name="see_all_transactions">Lihat Semua Transaksi</string>
    <string name="delete">Delete</string>
    <string name="omset_penjualan">Omset Penjualan</string>
    <string name="_5_produk_terlaris">5 Produk Terlaris</string>
    <string name="jumlah_order">Jumlah Order</string>
    <string name="omset">Omset</string>
    <string name="disclaimer_icon">disclaimer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--   Item Product   -->

    <string name="intro_title_1">Digitalisasi Toko</string>
    <string name="intro_title_2">Memudahkan analisa toko</string>
    <string name="intro_title_3">Pencatatan data di cloud</string>

    <string name="intro_desc_1">Permudah manajemen toko Anda dengan sistem digital yang modern dan efisien. Semua transaksi tercatat otomatis tanpa repot.</string>
    <string name="intro_desc_2">Dapatkan laporan penjualan lengkap dan visualisasi data yang membantu Anda mengambil keputusan bisnis yang lebih baik.</string>
    <string name="intro_desc_3">Nikmati kemudahan menyimpan data penjualan di cloud dengan aman. Akses kapan saja dan di mana saja.</string>

    <string name="skip">Skip</string>
    <string name="getStarted">Get Started</string>
</resources>