<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.culinairy.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.culinairy.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_capture_receipt"
        android:name="com.example.culinairy.ui.capture_ocr.CaptureReceiptFragment"
        android:label="@string/title_capture_receipt"
        tools:layout="@layout/fragment_capture_receipt" >
        <action
            android:id="@+id/action_captureReceiptFragment_to_captureReceiptResultFragment"
            app:destination="@id/navigation_capture_receipt_result" />
    </fragment>

    <fragment
        android:id="@+id/navigation_capture_receipt_result"
        android:name="com.example.culinairy.ui.capture_ocr_result.CaptureReceiptResultFragment"
        android:label="Hasil Scan"
        tools:layout="@layout/fragment_capture_receipt_result" >
        <action
            android:id="@+id/action_captureReceiptResultFragment_to_captureReceiptSuccessFragment"
            app:destination="@id/navigation_capture_receipt_success" />
    </fragment>

    <fragment
        android:id="@+id/navigation_capture_receipt_success"
        android:name="com.example.culinairy.ui.capture_ocr_success.CaptureReceiptSuccessFragment"
        android:label="Berhasil"
        tools:layout="@layout/fragment_capture_receipt_success" >
        <action
            android:id="@+id/action_captureReceiptSuccessFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_product"
        android:name="com.example.culinairy.ui.capture_ocr.ProductFragment"
        android:label="@string/title_product"
        tools:layout="@layout/fragment_create_product" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.culinairy.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_profile_edit"
        android:name="com.example.culinairy.ui.profile.EditProfileFragment"
        android:label="@string/title_profile_edit"
        tools:layout="@layout/fragment_edit_profile" />
</navigation>