<?xml version="1.0" encoding="utf-8"?>
<!-- intro_layout.xml -->
<androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rootLayout"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:padding="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Wrapper for Image Views -->
            <LinearLayout
                android:id="@+id/imageContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/introImage1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/intro1"
                    android:gravity="center"
                    app:layout_constraintVertical_bias="0.1"/>

                <ImageView
                    android:id="@+id/introImage2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/intro2"
                    android:gravity="center"
                    android:visibility="gone"/>

                <ImageView
                    android:id="@+id/introImage3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/intro3"
                    android:gravity="center"
                    android:visibility="gone"/>
            </LinearLayout>

            <!-- Wrapper for Intro Desc Text Views -->
            <LinearLayout
                android:id="@+id/contentContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/imageContainer">

                <TextView
                    android:id="@+id/introTitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/intro_title_1"
                    android:textColor="@color/gray6"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:id="@+id/introDesc1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/intro_desc_1"
                    android:textColor="@color/gray6"
                    android:textSize="18sp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/introTitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/intro_title_2"
                    android:textColor="@color/gray6"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/introDesc2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/intro_desc_2"
                    android:textColor="@color/gray6"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/introTitle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/intro_title_3"
                    android:textColor="@color/gray6"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/introDesc3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/intro_desc_3"
                    android:textColor="@color/gray6"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:visibility="gone"/>

            </LinearLayout>

            <!-- Dot indicator -->
            <HorizontalScrollView
                android:id="@+id/dotIndicatorContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/contentContainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/dot1"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_margin="5dp"
                        android:src="@drawable/dot_inactive"/>

                    <ImageView
                        android:id="@+id/dot2"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_margin="5dp"
                        android:src="@drawable/dot_inactive"/>

                    <ImageView
                        android:id="@+id/dot3"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_margin="5dp"
                        android:src="@drawable/dot_inactive"/>

                </LinearLayout>
            </HorizontalScrollView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/getStartedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/button"
                android:paddingVertical="15dp"
                android:text="@string/getStarted"
                app:cornerRadius="10dp"
                android:gravity="center"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/skipNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/skipText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="10dp"
                    android:text="@string/skip"
                    android:textAlignment="viewStart"
                    android:textColor="@color/gray6"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/nextText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="10dp"
                    android:text="@string/next"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/button"
                    android:textSize="16sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
