<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/itemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_0kg"
        android:textSize="14sp"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/itemEdit"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingVertical="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/spinner_input_container"
    />

    <TextView
        android:id="@+id/priceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rp0"
        android:textSize="14sp"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/itemText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/quantityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0x"
        android:textSize="14sp"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.60"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/quantityTextEditContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent" >

        <EditText
            android:id="@+id/quantityTextEdit"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/poppins"
            android:textAlignment="center"
            android:hint="@string/_0"
            android:textColorHint="@color/gray"
            android:inputType="number"
            android:maxLines="1"
            android:autofillHints="Quantity"
            android:background="@drawable/input_container"
            android:paddingHorizontal="5dp"
            android:paddingVertical="0dp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:layout_marginStart="3dp"
            android:textSize="14sp"
            android:fontFamily="@font/poppins"
            android:textStyle="bold"
            android:textColor="@color/black" />

    </LinearLayout>

    <TextView
        android:id="@+id/totalPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rp0"
        android:textSize="14sp"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:id="@+id/dottedLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/dotted_line"
        app:tint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>