<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.capture_ocr_success.CaptureReceiptSuccessFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/success"
        android:src="@drawable/save_success_logo"
        app:layout_constraintBottom_toTopOf="@+id/backToHomeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40" />

    <TextView
        android:id="@+id/successText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="15dp"
        android:fontFamily="@font/poppins"
        android:textAlignment="center"
        android:text="@string/struk_pembelanjaan_berhasil_ndisimpan_di_aplikasi"
        android:textColor="@color/green_500"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <FrameLayout
        android:id="@+id/backToHomeButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="25dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

    <ImageView
        android:id="@+id/backToHomeButtonBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/kembali_ke_home"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/backToHomeButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kembali_ke_home"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:layout_gravity="center" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>